<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="LabelFor,MissingConstraints,UnusedAttribute" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="299dp"
            android:layout_height="57dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:hint="@string/mail"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:ignore="LabelFor,MissingConstraints"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="800dp"
            android:layout_height="161dp"
            android:contentDescription="@string/todo1"
            android:src="@drawable/screen_margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="74dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="185dp"
            android:layout_marginRight="110dp"
            android:contentDescription="@string/todo3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/icon_2"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="259dp"
            android:layout_height="80dp"
            android:layout_marginTop="70dp"
            android:text="@string/opening"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="HardcodedText,MissingConstraints"
            tools:text="welcome to GTJD system please log in" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="59dp"
            android:layout_marginTop="150dp"
            android:text="Register"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@+id/editText2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="59dp"
            android:layout_marginTop="150dp"
            android:text="confirm"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="215dp"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            android:width="60dp"
            android:height="30dp"
            android:text="@string/Get_The_Job_Done"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:ignore="MissingConstraints"
            tools:text="Get The Job Done!" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="126dp"
            android:layout_height="79dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="250dp"
            android:layout_marginRight="250dp"
            android:width="120dp"
            android:height="100dp"
            android:gravity="top"
            android:text="@string/GTJD"
            android:textSize="50sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="@string/GTJD" />

        <ImageView
            android:layout_width="800dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/screen_margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.591"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />
    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>