<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="800dp"
            android:layout_height="161dp"
            android:contentDescription="@string/todo1"
            android:src="@drawable/screen_margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:layout_width="800dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/screen_margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.591"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="126dp"
            android:layout_height="79dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="250dp"
            android:layout_marginRight="250dp"
            android:width="120dp"
            android:height="100dp"
            android:gravity="top"
            android:text="@string/GTJD"
            android:textSize="50sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="@string/GTJD" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="74dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/todo3"
            app:layout_constraintStart_toEndOf="@+id/textViewTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_2"
            tools:ignore="ContentDescription,HardcodedText" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="215dp"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            android:width="60dp"
            android:height="30dp"
            android:text="@string/Get_The_Job_Done"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle"
            tools:ignore="MissingConstraints"
            tools:text="Get The Job Done!" />

        <EditText
            android:id="@+id/editTextEmailToSendNewPassword"
            android:layout_width="356dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="Enter your Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewForgotPasswordExpailnation"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="@+id/textViewForgotPasswordExpailnation"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordExpailnation"
            tools:ignore="LabelFor,MissingConstraints"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonSendNewPassword"
            android:layout_width="324dp"
            android:layout_height="69dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/button_background"
            android:text="Update password"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmailToSendNewPassword"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailToSendNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailToSendNewPassword" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="108dp"
            android:layout_height="88dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailToSendNewPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmailToSendNewPassword"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailToSendNewPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewForgotPasswordExpailnation"
            android:layout_width="405dp"
            android:layout_height="270dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="To create a new password, you must enter the email address of the user you are subscribed to.
            \n\nIf the user is already registered with the system, you will get an email with a link, you need to Click the link and enter a new password
            \n\nPlease follow the rules of writing password(one big letter, one small letter, one number, length of eight characters) to avoid problems when connecting to your user."
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>