<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="800dp"
            android:layout_height="163dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/screen_margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="74dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/todo3"
            app:layout_constraintStart_toEndOf="@+id/textViewTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_2"
            tools:ignore="ContentDescription,HardcodedText" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="800dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/screen_margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="126dp"
            android:layout_height="79dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="250dp"
            android:layout_marginRight="250dp"
            android:width="120dp"
            android:height="100dp"
            android:gravity="top"
            android:text="@string/GTJD"
            android:textSize="50sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="@string/GTJD" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="215dp"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            android:width="60dp"
            android:height="30dp"
            android:text="@string/Get_The_Job_Done"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle"
            tools:ignore="MissingConstraints"
            tools:text="Get The Job Done!" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="359dp"
            android:layout_height="57dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="Enter your Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewRegisterOpening"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/textViewRegisterOpening"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegisterOpening"
            tools:ignore="LabelFor,MissingConstraints"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Enter Password "
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:ignore="LabelFor,MissingConstraints,UnusedAttribute" />

        <Button
            android:id="@+id/Regisrer"
            android:layout_width="315dp"
            android:layout_height="56dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_background"
            android:text="Register"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextConfirm_password"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/editTextConfirm_password"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirm_password" />

        <EditText
            android:id="@+id/editTextConfirm_password"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Confirm Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="LabelFor,MissingConstraints,UnusedAttribute" />

        <TextView
            android:id="@+id/textViewRegisterOpening"
            android:layout_width="438dp"
            android:layout_height="129dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Please enter your Registration details
            \n\nNotice password should contain at least one capital letter, one regular letter and one number.
             \nEach password must contain at least 8 characters)"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="HardcodedText,MissingConstraints"
            tools:text="welcome to GTJD system please log in" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="108dp"
            android:layout_height="88dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toTopOf="@+id/editTextEmail"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />


    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>